# ReSale-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  prompts.py  routes.py  state.py
backend/app/api/: router.py
backend/app/api/routes/: images.py  (+4 more)
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: connection.py  init_db.py  seed_data.py
backend/app/models/: database.py  schemas.py
backend/app/repositories/: product_repository.py  session_repository.py
backend/app/services/: export_service.py  inventory_service.py  listing_service.py  market_data_export_service.py  market_data_import_service.py  negotiation_service.py  outcome_service.py  pricing_service.py  text_model_service.py  vision_service.py
backend/tests/: test_api_flow.py  test_config.py  test_demo_cases.py  test_field_checker.py  test_market_data_import.py  test_price_calculator.py  test_product_search.py  test_text_model_generation.py  test_vision_service.py
data/: demo_cases.json
docs/: architecture.md  demo-script.md  interview-qa.md  next-development-plan.md  roadmap.md  v1-acceptance.md
frontend/: api_client.py  app.py  session_state.py
frontend/components/: confirmation_form.py  inventory_panel.py  market_data_panel.py  negotiation_panel.py  outcome_panel.py  outcome_summary.py  pricing_card.py  question_form.py  upload_panel.py
frontend/pages/: 1_start.py  2_confirm.py  3_details.py  4_listing.py  5_negotiation.py
scripts/: run_demo_cases.py
(+4 files in other folders)
